2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml:
	* MonoDevelop.Projects.Gui/IconCodon.cs:
	* MonoDevelop.Projects.Gui/IconService.cs:
	* MonoDevelop.Projects.Gui/ProjectsGuiServices.cs:
	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.StartupOptionsPanelWidget.cs:
	  Removed icon service.

2009-04-16  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/RuntimeOptionsPanel.cs:
	  Moved SystemAssemblyService and related classes to the
	  namespace MonoDevelop.Core.Assemblies.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Projects.Gui.addin.xml: Bump MD version.

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Fixed
	  "Bug 494566 - Problem with generics completion.".

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: changed
	  default value for "CompleteWithSpaceOrPunctuation".

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: fixed
	  "Bug 494565 - New auto-complete behavior is improperly
	  labeled.".

2009-04-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	  Made the 'undo' of code completion operations more
	  intelligent.

2009-04-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	  shift+space now overrides automatic completion.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/BaseMemberCompletionData.cs:
	  Fixed Header.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui.Completion/BaseMemberCompletionData.cs:
	  Added icons to the template completion list.

2009-03-21  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.csproj: 
